--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
 
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
-  
+	<div [routerLink]="['/indicator']"><fa-icon [icon]="fabars" style = "margin-left:20px; margin-right: 10px;cursor: pointer;" ></fa-icon><a>Menu Principal</a></div> 
 </div>
 
 <div class="content" role="main">
-
   <!-- Highlight Card -->
-
-
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
@@ -20,3 +17,4 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <router-outlet></router-outlet>
+ 
