--- a/src/app/indicator/indicator.component.html
+++ b/src/app/indicator/indicator.component.html
@@ -2,8 +2,9 @@
 	<div class="card-container" style="display: grid;">
     <div class="card" target="_blank" rel="noopener" [routerLink]="['/indicator-detail', property.codigo]">
       <span style="font-size: large;">{{property.nombre}}</span>
-       <p style="font-size:12px;color: green;font-weight: bold;">{{property.unidad_medida}}</p><br>
-       <button type="button" [routerLink]="['/list-indicator', property.codigo]" class="btn btn-primary">Ver Info</button>
+       <p style="font-size:12px;color: green;font-weight: bold;">{{property.unidad_medida}}
+       	 <fa-icon [icon]="faConfing" style = "color: #1976d2; margin-left:5px" [routerLink]="['/list-indicator', property.codigo]"></fa-icon>
+       </p>
    </div>
   </div> 
 </div>
